--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Diziler\char-dizisi.cpp" />
     <ClCompile Include="Diziler\char-dizisi.c" />
+    <ClCompile Include="Diziler\dinamik-dizi.cpp" />
     <ClCompile Include="Diziler\diziler-for.cpp" />
     <ClCompile Include="Diziler\diziler.cpp" />
     <ClCompile Include="Döngüler\asal-carpan-bulma.cpp" />
