--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Diziler\dinamik-dizi.cpp" />
     <ClCompile Include="Diziler\diziler-for.cpp" />
     <ClCompile Include="Diziler\diziler.cpp" />
+    <ClCompile Include="Diziler\fonk-param-dizi.cpp" />
     <ClCompile Include="Döngüler\asal-carpan-bulma.cpp" />
     <ClCompile Include="Döngüler\asal-sayi-kontrolu.cpp" />
     <ClCompile Include="Döngüler\cift-sayilarin-toplami.cpp" />
