--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Diziler\char-dizisi.cpp" />
     <ClCompile Include="Diziler\char-dizisi.c" />
     <ClCompile Include="Diziler\dinamik-dizi.cpp" />
+    <ClCompile Include="Diziler\dizi-kopyala.cpp" />
     <ClCompile Include="Diziler\diziler-for.cpp" />
     <ClCompile Include="Diziler\diziler.cpp" />
     <ClCompile Include="Diziler\fonk-param-dizi.cpp" />
