--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Diziler\bubble-sort.cpp.cpp" />
+    <ClCompile Include="Diziler\bubble-sort.cpp" />
     <ClCompile Include="Diziler\char-dizisi.cpp" />
     <ClCompile Include="Diziler\char-dizisi.c" />
     <ClCompile Include="Diziler\dinamik-dizi.cpp" />
