--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -183,7 +183,7 @@
     <ClCompile Include="Diziler\dizi-kopyala.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Diziler\bubble-sort.cpp.cpp">
+    <ClCompile Include="Diziler\bubble-sort.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
