--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Diziler\fonk-param-dizi.cpp" />
     <ClCompile Include="Diziler\iki-boyutlu-dizi-2.cpp" />
     <ClCompile Include="Diziler\iki-boyutlu-dizi.cpp" />
+    <ClCompile Include="Diziler\matris-carpimi.cpp" />
     <ClCompile Include="Diziler\selection-sort.cpp" />
     <ClCompile Include="Döngüler\asal-carpan-bulma.cpp" />
     <ClCompile Include="Döngüler\asal-sayi-kontrolu.cpp" />
