--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -25,6 +25,9 @@
     <Filter Include="Source Files\Fonksiyonlar">
       <UniqueIdentifier>{16ab91a8-906c-42d8-8f09-ae105e3f07ea}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Diziler">
+      <UniqueIdentifier>{4c3dd148-7c28-4ce0-b861-3031925e3018}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Programlamaya Giriş\c-cpp-program.cpp">
@@ -162,44 +165,44 @@
     <ClCompile Include="Fonksiyonlar\ornek-2.cpp">
       <Filter>Source Files\Fonksiyonlar</Filter>
     </ClCompile>
-    <ClCompile Include="Diziler\diziler.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Diziler\diziler-for.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Diziler\bubble-sort.cpp">
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\char-dizisi.c">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\char-dizisi.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\dinamik-dizi.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Diziler\fonk-param-dizi.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\dizi-kopyala.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
-    <ClCompile Include="Diziler\bubble-sort.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Diziler\diziler.cpp">
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
-    <ClCompile Include="Diziler\selection-sort.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Diziler\diziler-for.cpp">
+      <Filter>Source Files\Diziler</Filter>
+    </ClCompile>
+    <ClCompile Include="Diziler\fonk-param-dizi.cpp">
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\iki-boyutlu-dizi.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\iki-boyutlu-dizi-2.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\matris-carpimi.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
     <ClCompile Include="Diziler\matrisin-devrigi.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Diziler</Filter>
+    </ClCompile>
+    <ClCompile Include="Diziler\selection-sort.cpp">
+      <Filter>Source Files\Diziler</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
