--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -216,7 +216,7 @@
     <ClCompile Include="Pointers (İşaretçiler)\pointer-parametre.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Pointers %28İşaretçiler%29\pointer-parametre-2.cpp">
+    <ClCompile Include="Pointers %28İşaretçiler%29\pointer-parametre-2.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Pointers %28İşaretçiler%29\pointer-fonksiyonu.c">
