malloc(), calloc(), realloc(), free()

--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Pointers %28İşaretçiler%29\char-pointer.c" />
     <ClCompile Include="Pointers %28İşaretçiler%29\pointer-parametre-2.c" />
     <ClCompile Include="Pointers %28İşaretçiler%29\pointer-fonksiyonu.c" />
+    <ClCompile Include="Pointers (İşaretçiler)\dinamik-bellek-kullanimi.cpp" />
     <ClCompile Include="Pointers (İşaretçiler)\pointer-parametre.cpp" />
     <ClCompile Include="Pointers (İşaretçiler)\pointers-2.cpp" />
     <ClCompile Include="Pointers (İşaretçiler)\pointers.c" />
