--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="Programlamaya Giriş\sabitler.cpp" />
     <ClCompile Include="Programlamaya Giriş\tip-donusum.cpp" />
     <ClCompile Include="Vektörler\vektorler-2.cpp" />
+    <ClCompile Include="Vektörler\vektorler-3.cpp" />
     <ClCompile Include="Vektörler\vektorler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
