--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -261,5 +261,8 @@
     <ClCompile Include="Vektörler\vektor-uygulamasi-3.cpp">
       <Filter>Source Files\Vektörler</Filter>
     </ClCompile>
+    <ClCompile Include="Structure (Veri Yapıları)\struct.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
