--- a/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
+++ b/C_C++_Temelleri/C_C++_Temelleri.vcxproj.filters
@@ -276,5 +276,8 @@
     <ClCompile Include="String Standart Fonksiyonlar\string-donusum-fonk.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="String Standart Fonksiyonlar\string-isleme-fonk.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
